# AI_Research

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
00_README/: keywords_queries.md  research_questions.md  scope.md
01_LITERATURE/: library.bib
01_LITERATURE/notes/: PAPER_NOTE_TEMPLATE.md  astm_b193_2016.md  astm_e1004_2017.md  bustillo_2018_ml.md  cahn_1996_microstructure.md  chinchanikar_2015_machinability.md  das_2017_aisi4340.md  davis_1998_machinability.md  ezugwu_2007_machinability.md  garcia_2012_contactless.md  ghoni_2014_eddy.md  han_2010_conductivity.md  iso_3685_1993.md  koley_2019_prediction.md  mativenga_2017_ml.md  rossiter_1987_electrical.md  shaw_2005_machinability.md  sick_2002_online.md  smithells_2004_metals.md  takamura_1969_resistivity.md  thelning_1984_steel.md  trent_2000_toolwear.md  wang_2018_eddy.md
02_EVIDENCE_MATRIX/: data_dictionary.md  evidence_matrix.csv
03_METHODS/: README.md  conductivity_protocol.md  machining_protocol.md  metrics_definitions.md
04_MODELS/: README.md  hypotheses.md  mlflow_config.py
05_DISSERTATION/: README.md  outline.md
06_NEWS_WATCH/: README.md
gui/: utils.py
gui/pages/: analysis.py  evidence_matrix.py  literature.py  models.py
notebooks/: 01_correlation_analysis.ipynb  NOTEBOOK_TEMPLATE.ipynb
src/machinability/: __init__.py
src/machinability/analysis/: __init__.py  correlation.py
src/machinability/data/: __init__.py  loader.py  preprocessing.py
tests/: test_correlation.py  test_preprocessing.py
(+5 files in other folders)
