[project]
name = "ai-research-machinability"
version = "0.1.0"
description = "Determining machinability of low-alloy steels via electrical conductivity measurements"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Data handling
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",

    # Machine learning
    "scikit-learn>=1.3",

    # Statistical analysis
    "statsmodels>=0.14",
    "pingouin>=0.5",           # Effect sizes, mediation analysis

    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",

    # Dashboard GUI
    "streamlit>=1.28",

    # Experiment tracking
    "mlflow>=2.8",

    # Jupyter
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]
deep = [
    # Only if neural network models are needed (RQ4)
    "torch>=2.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "gui*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
